--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,11 @@ rust-crypto = "0.2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 textnonce = "1"
-tokio = { version = "1.4", features = ["rt", "macros"] }
+tokio = { version = "1.4", features = ["io-util", "macros", "io-std", "rt-multi-thread", "rt"] }
 walkdir = "2"
-#tus_async_client = "0.1.0"
-tus_async_client = {git = "https://github.com/parture-org/tus_async_client"}
-reqwest = "0.11"
+tus_async_client = "0.2.1"
+reqwest = { version = "0.11", features = ["stream"] }
+futures = "0.3"
+async-stream = "0.3.3"
+async-trait = "0.1.56"
+futures-util = "0.3"
